# python-test

./: Makefile  README.md  crappy things  install-make.ps1  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup commands  setup.sh
app/: crud.py  main.py  models.py  schemas.py
sql/: base_sql.sql
src/: crud.py  main.py  models.py
src/app/: crud.py  database.py  main.py  models.py
src/app/tests/: test_main.py
tests/app/: test_main.py
