[tool.poetry]
name = "cat-rat-api"
version = "0.1.0"
description = "A FastAPI application for managing cats eating rats."
authors = ["Me The Cat"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"

[tool.poetry.scripts]
start = "poetry run dotenv -f .env run fastapi run"
start-dev = "poetry run dotenv -f .env run uvicorn app.main:app --reload"
test = "pytest"